# HYDRASKRIPT_16_OCT_FULL

./: App.css  App.js  Header.js  PaymentSuccess.js  Pricing.js  STRIPE_TESTING_GUIDE.md  ai_service.py  image_service.py  main_server.py  pasted_file_1UhxUj_com.google.android.apps.docs.editors.kix.editors.clipboarduuid=7d449791-dc4e-46e8-89fd-6c1f8e20701f  pasted_file_41hscI_com.google.android.apps.docs.editors.kix.editors.clipboarduuid=6de6265c-4dd4-405c-8dcc-d227227d9cce  pasted_file_CsbuTD_com.google.android.apps.docs.editors.kix.editors.clipboarduuid=78bd3fed-2e1d-4885-8c5f-d0d55e90bd7d  pasted_file_UTRjJN_com.google.android.apps.docs.editors.kix.editors.clipboarduuid=77086049-4c90-4133-a43b-4028d074ac1b  pasted_file_YHpJ1v_com.google.android.apps.docs.editors.kix.editors.clipboarduuid=3f817bf8-dc24-4220-af38-d18c30200c79  qwen_service.py  setup_stripe_products.py  stripe_service.py  test_fixes.py  useStripe.js
Chaptercraft_new/: .replit  package-lock.json  package.json  pyproject.toml  replit.md  scroll_script.js
Chaptercraft_new/.emergent/: emergent.yml
Chaptercraft_new/attached_assets/: MANUSKRIPTIFY PRICING GRAPH_1759066595924.docx  Pasted--The-Complete-Guide-to-Sustainable-Urban-Gardening-Table-of-Contents-1-Introduction-to-Urba-1759058429064_1759058429067.txt  Pasted--The-Rise-of-Artificial-Intelligence-A-Comprehensive-Guide-Table-of-Contents-1-Introductio-1759059647267_1759059647271.txt  Pasted--Three-Sisters-Summer-Adventure-Page-1-Emma-Sofia-and-Lily-bounced-excitedly-in-the-back-sea-1759053353016_1759053353019.txt  (+2 more)
Chaptercraft_new/backend/: database.py  (+10 more)
(+19 files in other folders)
