[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "boto3>=1.40.40",
    "dashscope>=1.24.6",
    "databases>=0.9.0",
    "deepl>=1.22.0",
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "langdetect>=1.0.9",
    "litellm>=1.77.4",
    "mammoth>=1.11.0",
    "motor>=3.7.1",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "pollinations-ai>=4.5.1",
    "pydantic[email]>=2.11.9",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "stripe>=12.5.1",
    "supabase>=2.20.0",
    "uvicorn>=0.37.0",
]
